--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -7,7 +7,7 @@ header#header
                 li.header-items
                     a(href="./story.html") Chuyện về làng
                 li.header-items
-                    a(href="#") Hằng ngày của con 
+                    a(href="./daily.html") Hằng ngày của con 
                 li.header-items.column-2
                     .logo.column-2
                         a.logo-link(href="./index.html")
@@ -29,7 +29,7 @@ header#header
             li.header-mobile-items
                 a(href="./story.html") Chuyện về làng
             li.header-mobile-items
-                a(href="#") Hằng ngày của con 
+                a(href="./daily.html") Hằng ngày của con 
             li.header-mobile-items
                 a(href="./members.html") Thành viên của làng
             li.header-mobile-items
