--- a/src/_templates/daily/d-3.pug
+++ b/src/_templates/daily/d-3.pug
@@ -12,19 +12,19 @@ section#daily-3
                             .swiper-wrapper
                                 .swiper-slide
                                     .daily-3__slide.column-6.column-12-mx
-                                        a(href="#").link-items 
+                                        a(href="news-details.html").link-items 
                                         img(src="./assets/_page/daily/d-3-1.png", alt="")
                                         .daily-3__slide-infor
                                             p Lễ Giáng Sinh
                                 .swiper-slide
                                     .daily-3__slide.column-6.column-12-mx
-                                        a(href="#").link-items 
+                                        a(href="news-details.html").link-items 
                                         img(src="./assets/_page/daily/d-3-2.png", alt="")
                                         .daily-3__slide-infor
                                             p Lễ Tổng kết
                                 .swiper-slide
                                     .daily-3__slide.column-6.column-12-mx
-                                        a(href="#").link-items 
+                                        a(href="news-details.html").link-items 
                                         img(src="./assets/_page/daily/d-2-3.png", alt="")
                                         .daily-3__slide-infor
                                             p Lễ Tổng kết
