--- a/src/_templates/members/m-1.pug
+++ b/src/_templates/members/m-1.pug
@@ -1,7 +1,7 @@
 section#members1 
   .members1
     .container
-      .members1--title
+      .members1__title
         each tit in ['1']
           - let title = "Học sinh";
           include ../_layout/title.pug
