--- a/src/styles/pages/members/m-1.scss
+++ b/src/styles/pages/members/m-1.scss
@@ -8,7 +8,9 @@
       text-align: center;
     }
     &--wrapper {
-      @include section(s70, margin-top);
+      // @include section(s70, margin-top);
+      @include section(s48, margin-top);
+
       width: 100%;
       .myStudent-thumb,
       .myStudent {
