--- a/src/styles/pages/story/s-1.scss
+++ b/src/styles/pages/story/s-1.scss
@@ -9,11 +9,14 @@
             margin: 30px 0;
         }
         &__title{
-            @include section(s70, margin-bottom);
+            // @include section(s70, margin-bottom);
+
             width: 100%;
             text-align: center;
         }
         &__content{
+            @include section(s48, margin-top);
+
             display: flex;
             flex-wrap: wrap;
             align-items: center;
