--- a/src/styles/pages/village/v-2.scss
+++ b/src/styles/pages/village/v-2.scss
@@ -7,7 +7,8 @@
   }
 
   &-wrapper{
-    @include section(s70, margin-top);
+    // @include section(s70, margin-top);
+    @include section(s48, margin-top);
 
     &__item{
       padding-bottom: 6px;
