--- a/src/news-details.pug
+++ b/src/news-details.pug
@@ -10,7 +10,7 @@ block var
 	- let pageName = "Những tấm gương hoàn cảnh khó khăn hiếu học vươn lên của các con ở làng";
 	- let breadcrumbs = "breadcrumbs";
 	
-	- let breadcrumbPrev = [["Chuyện về làng","#"]]
+	- let breadcrumbPrev = [["Chuyện về làng","./story.html"]]
 	- let breadcrumbRecent = ["Những tấm gương hoàn cảnh khó khăn hiếu học vươn lên của các con ở làng"]
 
 
