--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -10,18 +10,18 @@ header#header
                     a(href="./daily.html") Hằng ngày của con 
                 li.header-items.column-2
                     .logo.column-2
-                        a.logo-link(href="./index.html")
+                        a.logo-link(href="/")
                             img(src="./assets/layout/header/Group1.png", alt="logo")
                 li.header-items
                     a(href="./members.html") Thành viên của làng
                 li.header-items
                     a(href="./companion.html") Đồng hành cùng con 
                 li.header-items
-                    a(href="#")  Liên hệ 
+                    a(href="./contact.html")  Liên hệ 
             
     .header-mobile
         .logo-mobile.column-2
-            a.logo-mobile-link(href="./index.html")
+            a.logo-mobile-link(href="/")
                 img(src="./assets/layout/header/Group1.png", alt="logo")
         ul.header-mobile-list 
             li.header-mobile-items
@@ -35,6 +35,6 @@ header#header
             li.header-mobile-items
                 a(href="./companion.html") Đồng hành cùng con 
             li.header-mobile-items
-                a(href="#")  Liên hệ 
+                a(href="./contact.html") Liên hệ 
         .header__button
             .header__button-border
