--- a/src/_templates/village/v-2.pug
+++ b/src/_templates/village/v-2.pug
@@ -6,7 +6,7 @@ section#village2
           - let title = "Tài liệu & Báo cáo";
           include ../_layout/title.pug
       .village2-wrapper.table-row.table-column-2.between.table-column-1-ts
-        - let arrayVillage2 = [["Tài liệu", `./assets/_page/village/document.png`,"./details.html"], ["Báo cáo", `./assets/_page/village/report.png`,"./details.html"]]
+        - let arrayVillage2 = [["Tài liệu", `./assets/_page/village/document.png`,"./news-details.html"], ["Báo cáo", `./assets/_page/village/report.png`,"./news-details.html"]]
         each val in arrayVillage2
           - let desc = val[0];
           - let img = val[1];
