--- a/src/styles/pages/contact/ct-1.scss
+++ b/src/styles/pages/contact/ct-1.scss
@@ -9,13 +9,15 @@
         @include spaceIndex4(s45,margin-top);
         width: 100%;
         position: relative;
-        padding-top: 100%;
+        padding-top: 50%;
         iframe{
             position: absolute;
             top: 0%;
             left: 0%;
             right: 0%;
             bottom: 0%;
+            width: 100%;
+            height: 100%;
         }
     }
 }
