--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,207 +1,373 @@
 #footer {
     background-color: map-get($color, lo);
     // margin-top: 100px;
-    border-top: solid 3px map-get($color, primary);
     position: relative;
     max-width: 1920px;
     width: 100%;
     margin: auto;
-    &.indexfooter {
-        padding-top: 20px;
-        background-color: transparent;
-        .footer {
-            padding-bottom: 39%;
-        }
-        .footer-img {
-            display: flex;
+    .footer {
+        @include spaceIndex4(s70, padding-top);
+        position: relative;
+        .overlay{
             position: absolute;
-            bottom: -35px;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 0%;
+            bottom: 0;
             width: 100%;
-            height: 100%;
-            z-index: -1;
-            margin: auto;
-            @include rp(mx) {
-                height: 60%;
+            height: 70%;
+            background-position: bottom;
+            background: map-get($color , main );
+        }
+        &-map{
+            width: 100%;
+            position: relative;
+            z-index: 1;
+            padding-top: 57%;
+            padding: 0px 8px;
+            iframe{
+                border-radius: 0 0 50px 50px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 96%;
+                height: 96%;
+                transform: translate(-50%, -50%);
+
             }
-            &__overlay {
-                position: relative;
+            &::after{
+                content: "";
+                position: absolute;
+                top: 1%;
+                left: 0%;
+                background: map-get($color , bg);
                 width: 100%;
-                // img {
-                //     // position: absolute;
-                //     // bottom: 0;
-                //     // right:0;
-                //     // width: auto;
-                //     // object-fit: contain;
-                //     // max-width: unset;
-                // }
-                .mobile {
-                    display: none;
-                }
-                .pc {
+                height: 100%;
+                z-index: -1;
+                border-radius: 0 0 50px 50px;
+              }
+        }
+        &__content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+           
+        }
+        &-list {
+            margin-top: 32px;
+            width: 100%;
+            display: flex;
+            list-style-type: none;
+            justify-content: space-between;
+            position: relative;
+            align-items: center;
+            @include rp(tl){
+                display: none;
+            }
+            .logo {
+                &-link {
+                    width: 100%;
                     display: block;
                 }
-                @media (max-width: 456px) {
-                    .mobile {
-                        display: block;
-                    }
-                    .pc {
-                        display: none;
-                    }
+                img {
+                    width: 120px;
+                    height: 120px;
+                    object-fit: contain;
+                }
+            }
+        }   
+        &-items{
+            &>*{
+                @include size(body1);
+                @include semi-bold;
+                color: map-get($color , text4 );
+                @include rp(ps){
+                  font-size: 1.6rem;
                 }
             }
         }
-        .footer-copyright {
-            position: absolute;
-            left: 0;
-        }
-    }
-    .footer-img {
-        display: none;
-    }
-    .footer-copyright {
-        background-color: #424242;
-        width: 100%;
-
-        &__section {
-            display: flex;
-            align-items: center;
+        &-mobile{
+            margin-top: 24px;
             width: 100%;
-            padding: 15px 0;
-            @include rp(mx) {
-                flex-direction: column;
+            display: none;
+            @include rp(tl){
+                display: flex;
             }
-
-            &-decs {
-                &:not(:last-child) {
-                    @include rp(mx){
-                        margin-bottom: 10px;
+            .logo-mobile {
+                &-link {
+                    width: 100%;
+                    display: block;
+                }
+                img {
+                    width: 120px;
+                    height: 120px;
+                    object-fit: contain;
+                }
+            }
+            &-list{
+                display: flex;
+                list-style-type: none; 
+                align-items: center;
+                flex-wrap: wrap;
+            }
+            &-items{
+                padding: 10px 10px;
+                flex: 0 0 33.3333%;
+                &>*{
+                    @include size(body1);
+                    @include regular;
+                    color: map-get($color , text4 );
+                    @include rp(ps){
+                      font-size: 1.6rem;
                     }
-                    
-                }
-                a,
-                p {
-                    color: map-get($color, clear-white);
-                    text-align: center;
                 }
             }
-            .term-policy {
-                margin-left: auto;
-                @include rp(mx) {
-                    margin-left: unset;
+        }
+        &-address {
+            margin-top: 32px;
+            @include rp(tl){
+                margin-top: 24px;
+            }
+            &>*{
+                @include size(body1);
+                @include regular;
+                color: map-get($color , text4 );
+                @include rp(ps){
+                  font-size: 1.6rem;
                 }
             }
+        }
+        &-phone {
+            margin-top: 32px;
+            @include rp(tl){
+                margin-top: 24px;
+            }
+            &>*{
+                @include size(body1);
+                @include regular;
+                color: map-get($color , text4 );
+                @include rp(ps){
+                  font-size: 1.6rem;
+                }
+            }
+        }
+        &-btnBackToTop{
+            margin: 20px 0px;
         }
     }
-    .footer {
-        padding-top: 30px;
-        padding-bottom: 100px;
-        width: 100%;
-        display: flex;
-        margin: 0 -8px;
-
-        @include rp(mx) {
-            margin: 0;
-            padding-bottom: 50px;
-        }
-        flex-wrap: wrap;
-        &--infor {
-            .jf-social-link {
-                align-items: end;
-                margin: 0;
-                @include rp(mx) {
-                    margin-bottom: 30px;
+    .footer-copyright{
+        background: map-get($color , sub1);
+        padding: 25px 0;
+        &__title{
+            width: 100%;
+            text-align: center;
+            &>*{
+                @include size(body1);
+                @include regular;
+                color: map-get($color , text4 );
+                @include rp(ps){
+                  font-size: 1.6rem;
                 }
-                &__title {
-                    @include body1;
-                }
-            }
-            @include rp(mx) {
-                margin-right: 15px;
-                margin-bottom: 20px;
-            }
-            &__items {
-                &--title {
-                    margin-bottom: 10px;
-                    p,
-                    a {
-                        color: map-get($color, primary);
-                        @include h5;
-                    }
-                    a {
-                        position: relative;
-                        &::after {
-                            border-style: solid;
-                            border-width: 0.15em 0.15em 0 0;
-                            content: "";
-                            display: inline-block;
-                            height: 8px;
-                            right: -5px;
-                            position: absolute;
-                            width: 8px;
-                            top: 50%;
-                            overflow: hidden;
-                            opacity: 0;
-                            transform: translateY(-50%) rotate(45deg);
-                            color: map-get($color, primary);
-                            transition: 0.3s ease-in-out;
-                        }
-                        &:hover {
-                            &::after {
-                                opacity: 1;
-                                right: -15px;
-                            }
-                        }
-                    }
-                }
-                &--link {
-                    ul {
-                        li {
-                            list-style-type: none;
-                            margin-bottom: 10px;
-                            p,
-                            a {
-                                color: map-get($color, pure-grey);
-                                @include body1;
-                                &:hover {
-                                    color: map-get($color, main);
-                                }
-                            }
-                            a {
-                                position: relative;
-                                &::after {
-                                    border-style: solid;
-                                    border-width: 0.15em 0.15em 0 0;
-                                    content: "";
-                                    display: inline-block;
-                                    height: 8px;
-                                    right: -10px;
-                                    position: absolute;
-                                    width: 8px;
-                                    top: 50%;
-                                    transform: translateY(-50%) rotate(45deg);
-                                    color: map-get($color, primary);
-                                    transition: 0.3s ease-in-out;
-                                }
-                                &:hover {
-                                    &::after {
-                                        right: -15px;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-        &--link {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            @include rp(mx) {
-                justify-content: space-between;
             }
         }
     }
 }
+// &.indexfooter {
+//     padding-top: 20px;
+//     background-color: transparent;
+//     .footer {
+//         padding-bottom: 39%;
+//     }
+//     .footer-img {
+//         display: flex;
+//         position: absolute;
+//         bottom: -35px;
+//         left: 50%;
+//         transform: translateX(-50%);
+//         width: 100%;
+//         height: 100%;
+//         z-index: -1;
+//         margin: auto;
+//         @include rp(mx) {
+//             height: 60%;
+//         }
+//         &__overlay {
+//             position: relative;
+//             width: 100%;
+//             // img {
+//             //     // position: absolute;
+//             //     // bottom: 0;
+//             //     // right:0;
+//             //     // width: auto;
+//             //     // object-fit: contain;
+//             //     // max-width: unset;
+//             // }
+//             .mobile {
+//                 display: none;
+//             }
+//             .pc {
+//                 display: block;
+//             }
+//             @media (max-width: 456px) {
+//                 .mobile {
+//                     display: block;
+//                 }
+//                 .pc {
+//                     display: none;
+//                 }
+//             }
+//         }
+//     }
+//     .footer-copyright {
+//         position: absolute;
+//         left: 0;
+//     }
+// }
+// .footer-img {
+//     display: none;
+// }
+// .footer-copyright {
+//     background-color: #424242;
+//     width: 100%;
+
+//     &__section {
+//         display: flex;
+//         align-items: center;
+//         width: 100%;
+//         padding: 15px 0;
+//         @include rp(mx) {
+//             flex-direction: column;
+//         }
+
+//         &-decs {
+//             &:not(:last-child) {
+//                 @include rp(mx){
+//                     margin-bottom: 10px;
+//                 }
+
+//             }
+//             a,
+//             p {
+//                 color: map-get($color, clear-white);
+//                 text-align: center;
+//             }
+//         }
+//         .term-policy {
+//             margin-left: auto;
+//             @include rp(mx) {
+//                 margin-left: unset;
+//             }
+//         }
+//     }
+// }
+// .footer {
+//     padding-top: 30px;
+//     padding-bottom: 100px;
+//     width: 100%;
+//     display: flex;
+//     margin: 0 -8px;
+
+//     @include rp(mx) {
+//         margin: 0;
+//         padding-bottom: 50px;
+//     }
+//     flex-wrap: wrap;
+//     &--infor {
+//         .jf-social-link {
+//             align-items: end;
+//             margin: 0;
+//             @include rp(mx) {
+//                 margin-bottom: 30px;
+//             }
+//             &__title {
+//                 @include body1;
+//             }
+//         }
+//         @include rp(mx) {
+//             margin-right: 15px;
+//             margin-bottom: 20px;
+//         }
+//         &__items {
+//             &--title {
+//                 margin-bottom: 10px;
+//                 p,
+//                 a {
+//                     color: map-get($color, primary);
+//                     @include h5;
+//                 }
+//                 a {
+//                     position: relative;
+//                     &::after {
+//                         border-style: solid;
+//                         border-width: 0.15em 0.15em 0 0;
+//                         content: "";
+//                         display: inline-block;
+//                         height: 8px;
+//                         right: -5px;
+//                         position: absolute;
+//                         width: 8px;
+//                         top: 50%;
+//                         overflow: hidden;
+//                         opacity: 0;
+//                         transform: translateY(-50%) rotate(45deg);
+//                         color: map-get($color, primary);
+//                         transition: 0.3s ease-in-out;
+//                     }
+//                     &:hover {
+//                         &::after {
+//                             opacity: 1;
+//                             right: -15px;
+//                         }
+//                     }
+//                 }
+//             }
+//             &--link {
+//                 ul {
+//                     li {
+//                         list-style-type: none;
+//                         margin-bottom: 10px;
+//                         p,
+//                         a {
+//                             color: map-get($color, pure-grey);
+//                             @include body1;
+//                             &:hover {
+//                                 color: map-get($color, main);
+//                             }
+//                         }
+//                         a {
+//                             position: relative;
+//                             &::after {
+//                                 border-style: solid;
+//                                 border-width: 0.15em 0.15em 0 0;
+//                                 content: "";
+//                                 display: inline-block;
+//                                 height: 8px;
+//                                 right: -10px;
+//                                 position: absolute;
+//                                 width: 8px;
+//                                 top: 50%;
+//                                 transform: translateY(-50%) rotate(45deg);
+//                                 color: map-get($color, primary);
+//                                 transition: 0.3s ease-in-out;
+//                             }
+//                             &:hover {
+//                                 &::after {
+//                                     right: -15px;
+//                                 }
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     &--link {
+//         display: flex;
+//         flex-wrap: wrap;
+//         justify-content: space-evenly;
+//         @include rp(mx) {
+//             justify-content: space-between;
+//         }
+//     }
+// }
+// }
