--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -93,6 +93,10 @@
             @include rp(tl){
                 display: flex;
             }
+            @include rp(mx){
+                flex-direction: column;
+                align-items: center;
+            }
             .logo-mobile {
                 &-link {
                     width: 100%;
@@ -102,6 +106,10 @@
                     width: 120px;
                     height: 120px;
                     object-fit: contain;
+                    @include rp(mx){
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
             &-list{
@@ -113,7 +121,9 @@
             &-items{
                 padding: 10px 10px;
                 flex: 0 0 33.3333%;
+                text-align: center;
                 &>*{
+                    
                     @include size(body1);
                     @include regular;
                     color: map-get($color , text4 );
@@ -129,6 +139,7 @@
                 margin-top: 24px;
             }
             &>*{
+                text-align: center;
                 @include size(body1);
                 @include regular;
                 color: map-get($color , text4 );
@@ -143,6 +154,7 @@
                 margin-top: 24px;
             }
             &>*{
+                text-align: center;
                 @include size(body1);
                 @include regular;
                 color: map-get($color , text4 );
@@ -153,6 +165,9 @@
         }
         &-btnBackToTop{
             margin: 20px 0px;
+            @include rp(tl){
+                margin: 10px 0px;
+            }
         }
     }
     .footer-copyright{
