--- a/src/_templates/_layout/_footer.pug
+++ b/src/_templates/_layout/_footer.pug
@@ -21,7 +21,7 @@ footer#footer
                     li.footer-items
                         a(href="./companion.html") Đồng hành cùng con 
                     li.footer-items
-                        a(href="#")  Liên hệ 
+                        a(href="contact.html")  Liên hệ 
                 .footer-mobile
                     .logo-mobile.column-2
                         a.logo-mobile-link(href="./index.html")
@@ -38,7 +38,7 @@ footer#footer
                         li.footer-mobile-items
                             a(href="./companion.html") Đồng hành cùng con 
                         li.footer-mobile-items
-                            a(href="#")  Liên hệ 
+                            a(href="contact.html")  Liên hệ 
                 .footer-address 
                     p Địa chỉ: 209 Dũng Sĩ Thanh Khê, Thanh Khê Tây, Thanh Khê, Đà Nẵng
                 .footer-phone 
