--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -2,7 +2,7 @@
     background-color: map-get($color, lo);
     // margin-top: 100px;
     position: relative;
-    max-width: 1920px;
+    // max-width: 1920px;
     width: 100%;
     margin: auto;
     .footer {
