--- a/src/styles/components/_close.scss
+++ b/src/styles/components/_close.scss
@@ -1,5 +1,6 @@
 
 .close{
+  z-index: 11;
   position: absolute;
   top: 0;
   right: 0;
@@ -10,7 +11,7 @@
 
   box-shadow: map-get($shadow, s1);
 
-  border-radius: 0 0 0 16px;
+  // border-radius: 0 0 0 16px;
 
   overflow: hidden;
   cursor: pointer;
@@ -32,7 +33,8 @@
     transform: translate(-50%, -50%) rotate(-45deg);
     width: 55%;
     height: 3px;
-    background-color: map-get($color, main);
+    background-color: map-get($color, sub1);
+    transition: .16s background ease-in-out;
 
     &:first-child{
       transform: translate(-50%, -50%) rotate(45deg);
@@ -43,6 +45,9 @@
     background-color: map-get($color, bg1);
     .close--rotate{
       transform: rotate(90deg);
+    }
+    .line{
+      background-color: map-get($color, main);
     }
   }
 }
