--- a/src/_templates/_layout/_footer.pug
+++ b/src/_templates/_layout/_footer.pug
@@ -14,7 +14,7 @@ footer#footer
                         a(href="#") Hằng ngày của con 
                     li.footer-items
                         .logo
-                            a.logo-link(href="./index.html")
+                            a.logo-link(href="./")
                                 img(src="./assets/layout/header/Group1.png", alt="logo")
                     li.footer-items
                         a(href="./members.html") Thành viên của làng
@@ -24,7 +24,7 @@ footer#footer
                         a(href="contact.html")  Liên hệ 
                 .footer-mobile
                     .logo-mobile.column-2
-                        a.logo-mobile-link(href="./index.html")
+                        a.logo-mobile-link(href="./")
                             img(src="./assets/layout/header/Group1.png", alt="logo")
                     ul.footer-mobile-list 
                         li.footer-mobile-items
@@ -64,5 +64,5 @@ footer#footer
     .footer-copyright
         .container
             .footer-copyright__title
-                p Copyright © 2021. All rights reserved. Designed by BRANEY
+                p Copyright © 2021 .Thiết kế &amp; tài trợ bởi Braney
                 
