--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -10,7 +10,7 @@ header#header
                     a(href="./daily.html") Hằng ngày của con 
                 li.header-items.column-2
                     .logo.column-2
-                        a.logo-link(href="/")
+                        a.logo-link(href="./")
                             img(src="./assets/layout/header/Group1.png", alt="logo")
                 li.header-items
                     a(href="./members.html") Thành viên của làng
@@ -21,7 +21,7 @@ header#header
             
     .header-mobile
         .logo-mobile.column-2
-            a.logo-mobile-link(href="/")
+            a.logo-mobile-link(href="./")
                 img(src="./assets/layout/header/Group1.png", alt="logo")
         ul.header-mobile-list 
             li.header-mobile-items
