--- a/src/styles/abstracts/_swiper.scss
+++ b/src/styles/abstracts/_swiper.scss
@@ -5,7 +5,7 @@
 
     .swiper-container {
         .swiper-wrapper {
-            padding: 5px 0;
+            // padding: 5px 0;
 
             // height đều các item
             align-items: stretch;
