--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -174,6 +174,7 @@
             }
         }
         &-btnBackToTop{
+            cursor: pointer;
             margin: 20px 0px;
             @include rp(tl){
                 margin: 10px 0px;
