--- a/src/_templates/_layout/_popup.pug
+++ b/src/_templates/_layout/_popup.pug
@@ -13,16 +13,16 @@ section#popupImg
           .nav-custom 
             .swiper-container.swiper-popup
               .swiper-wrapper
-                .swiper-slide
-                  img(src="./assets/_page/members/student-4.png", alt="")
-                .swiper-slide
-                  img(src="./assets/_page/members/student-3.png", alt="")
-                .swiper-slide
-                  img(src="./assets/_page/members/student-3.png", alt="")
-                .swiper-slide
-                  img(src="./assets/_page/members/student-2.png", alt="")
-                .swiper-slide
-                  img(src="./assets/_page/members/student-1.png", alt="")
+                //- .swiper-slide
+                //-   img(src="./assets/_page/members/student-4.png", alt="")
+                //- .swiper-slide
+                //-   img(src="./assets/_page/members/student-3.png", alt="")
+                //- .swiper-slide
+                //-   img(src="./assets/_page/members/student-3.png", alt="")
+                //- .swiper-slide
+                //-   img(src="./assets/_page/members/student-2.png", alt="")
+                //- .swiper-slide
+                //-   img(src="./assets/_page/members/student-1.png", alt="")
             .swiper-button-next
                 <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 18.121 33.414">
                     <path id="Path_8" data-name="Path 8" d="M2300,2896l16,16-16,16" transform="translate(-2299.293 -2895.293)" fill="none" stroke="#066543" stroke-width="2"/>
