--- a/src/contact.pug
+++ b/src/contact.pug
@@ -5,7 +5,7 @@ block var
 	- let bodyClass = 'contact-page';
 	//- - let indexFooter = "indexfooter";
 	- let bannerIndex = "bannerIndex";
-
+	- let contact = false;
 block main
 	div(id="contactPage")
 		include _templates/contact/ct-1
