--- a/src/daily.pug
+++ b/src/daily.pug
@@ -7,7 +7,7 @@ block var
 	- let imgBanner = {};
 	- imgBanner.src = "./assets/_page/daily/banner.png"
 	- let pageName = "Hằng ngày của con"
-
+	- let contact = true;
 block main
 	div(id="dailyPage")
 		include _templates/daily/d-1
