--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ block var
 	- let bodyClass = 'index-page';
 	//- - let indexFooter = "indexfooter";
 	- let bannerIndex = "bannerIndex";
-
+	- let contact = true;
 block main
 	div(id="indexPage")
 		include _templates/index/i-1
