--- a/src/news-details.pug
+++ b/src/news-details.pug
@@ -13,7 +13,7 @@ block var
 	- let breadcrumbPrev = [["Chuyện về làng","./story.html"]]
 	- let breadcrumbRecent = ["Những tấm gương hoàn cảnh khó khăn hiếu học vươn lên của các con ở làng"]
 
-
+	- let contact = true;
 block main
 	div(id="news-detailsPage")
 		include _templates/news-details/n-d-1
