--- a/src/story.pug
+++ b/src/story.pug
@@ -8,7 +8,7 @@ block var
 	- let imgBanner = {};
 	- imgBanner.src = "./assets/_page/story/banner.png";
 	- let pageName = "Chuyện về làng";
-
+	- let contact = true;
 block main
 	div(id="storyPage")
 		include _templates/story/s-1
