--- a/src/styles/pages/companion/c-5.scss
+++ b/src/styles/pages/companion/c-5.scss
@@ -1,6 +1,6 @@
 .companion5{
   @include section(s70, padding-top);
-  @include section(s70, padding-bottom);
+  // @include section(s70, padding-bottom);
 
   &__title{
     text-align: center;
