--- a/src/styles/pages/daily/d-3.scss
+++ b/src/styles/pages/daily/d-3.scss
@@ -1,6 +1,6 @@
 #daily-3{
     .daily-3{
-        @include section(s70, margin-bottom);
+        // @include section(s70, margin-bottom);
         @include section(s70, margin-top);
         &__wrapper{
             width: 100%;
