--- a/src/companion.pug
+++ b/src/companion.pug
@@ -7,7 +7,7 @@ block var
 	- let imgBanner = {};
 	- imgBanner.src = "./assets/_page/companion/banner.png"
 	- let pageName = "Đồng hành cùng con"
-
+	- let contact = true;
 block main
 	div(id="companionPage")
 		include _templates/companion/c-1
