--- a/src/members.pug
+++ b/src/members.pug
@@ -7,7 +7,7 @@ block var
 	- let imgBanner = {};
 	- imgBanner.src = "./assets/_page/members/banner.png"
 	- let pageName = "Thành viên của làng"
-
+	- let contact = true;
 block main
 	div(id="membersPage")
 		include _templates/members/m-1
