--- a/src/news.pug
+++ b/src/news.pug
@@ -8,7 +8,7 @@ block var
 	- let imgBanner = {};
 	- imgBanner.src = "./assets/_page/story/banner.png";
 	- let pageName = "Tin tức và sự kiện";
-
+	- let contact = true;
 block main
 	div(id="newsPage")
 		include _templates/news/n-1
