--- a/src/village.pug
+++ b/src/village.pug
@@ -7,7 +7,7 @@ block var
 	- let imgBanner = {};
 	- imgBanner.src = "./assets/_page/village/banner.png";
 	- let pageName = "Làng của con";
-
+	- let contact = true;
 block main
 	div(id="villagePage")
 		include _templates/village/v-1
